fix: correções no dark mode e tokens antigos

--- a/src/components/admin/table/Table.scss
+++ b/src/components/admin/table/Table.scss
@@ -138,6 +138,7 @@
 	}
 
 	.ui-table-cell.-auto {
+		color: var(--s-color-content-light);
 		width: 1px;
 		z-index: var(--s-index-low);
 		white-space: nowrap;
